--- a/Dental/css/style.css
+++ b/Dental/css/style.css
@@ -71,8 +71,8 @@ li{
 .single-slide{
 	flex-direction: column;
 	align-items: flex-start;
-	padding-top: 300px;
-    padding-left: 130px;
+	padding-top: 5%;
+    padding-left: 3%;
     background-position: center !important;
     background-size: cover !important;
     background-repeat: no-repeat !important;
@@ -173,6 +173,9 @@ li{
   color: #fff;
   border-radius: 25px;
 }
+.post-img{
+   width: 100%;
+ }
 /*-----------------team-----------------------*/
 .team-top-header{
   text-align: center;
@@ -360,9 +363,6 @@ li{
     .single-post{
       flex-direction: column;
       align-items: center;
-    }
-    .post-img{
-      width: 400px;
     }
  }
 
